# convex-hull-3d

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  test_debug.py
src/convex_hull/: __init__.py  base.py  offset_mask.py  peak_integrator.py  region_grower.py  single_peak_integration.py  slice_plot.py  thresholding.py  visualize.py
