[project]
name = "convex_hull"
description = "Fitting convex hulls in 3D reciprocal space"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "scikit-image>=0.23.2"
]
license = { text = "GPL3.0" }

[build-system]
requires = [
   "setuptools",
   "wheel",
   "toml",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
vis = [
    "plotly>=6.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.yml","*.yaml","*.ini"]
